<resources>
    <string name="app_name">Scrumify</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="create_new">Click to Register</string>
    <string name="not_register">Not Registered?</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Register</string>
    <string name="name_error">Enter your name</string>
    <string name="phone_error">Enter your phone number</string>
    <string name="email_error">Enter your email address</string>
    <string name="error_invalid_email">Invalid Email</string>
    <string name="password_error">Enter a password</string>
    <string name="error_invalid_password">Enter a minimum password of 6 characters</string>
    <string name="already_have_an_account">Already have an account?</string>

    <string name="dateHint">--/--/----</string>

    <!-- NewProject Activity/Layout String -->
    <string name="status">Initial Status:</string>

    <string name="update">Update task</string>

    <!-- TaskList Activity/Layout Strings -->
    <string name="taskFindHint">Find Task</string>

    <!-- New Task Activity/Layout Strings -->
    <string name="new_task">Add New Task</string>
    <string name="addTaskName">Task Name:</string>
    <string name="addTaskHint">Task Name</string>
    <string name="subtask">Subtask</string>
    <string name="nestUnder">Nest Under:</string>
    <string name="nestUnderHint">Nest Task</string>
    <string name="addTaskButton">Add Task</string>
    <string name="title_activity_pictures_manager">PicturesManager</string>


    <!-- NewTask Strings -->
    <string name="priority">Priority:</string>
    <string name="percentage">Percentage done:</string>
    <string name="taskStartDate">Task start date:</string>
    <string name="taskDueDate">Task due date:</string>
    <string name="taskDescription">Task description:</string>
    <string name="descriptionHint">Task description</string>

    <string name="title_activity_all_tasks">AllTasksActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_new_project">NewProjectActivity</string>

    <!-- NewProject Activity/Layout String -->
    <string name="new_project">Add New Project</string>
    <string name="project_name">Project Name:</string>
    <string name="addProjectHint">Project Name</string>
    <string name="addstatusHint">Initial Status</string>
    <string name="projectStartDate">Start Date:</string>
    <string name="projectDueDate">Due Date:</string>
    <string name="addProjectButton">Add Project</string>


    <string name="action_settings">Settings</string>
    <string name="imageDesc">Image</string>
    <string name="title_activity_new_task">NewTask</string>
    <string name="title_activity_task">Task</string>

    <string name="currentStatus">Status:</string>


    <!-- Project Menu strings -->
    <string name="about">About</string>
    <string name="syncall">Sync All</string>
    <string name="user">User</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_users">Users</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign In</string>
    <string name="content_description">icon_description</string>
    <string name="sign_out">Sign Out</string>

    <string name="app_slogan">Manage your projects here</string>
    <string name="create_project">Create Project</string>
    <string name="view_projects">View Projects</string>
    <string name="my_projects">My Projects</string>
    <string name="search_users">Search Users</string>
    <string name="add_to_project">Add To Project</string>
    <string name="add">Add</string>
    <string name="team_members">Team Members</string>
    <string name="remove">Remove</string>
    <string name="backlog">Backlog</string>
    <string name="tasks">Tasks</string>
    <string name="task_name">Task Name</string>
    <string name="sprint_name_check">Please enter valid Sprint Name</string>
    <string name="sprint_date_check">Please select start and end Dates</string>

    <string name="add_tasks">Add Tasks</string>
    <string name="update_task">Update Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="sprints">Sprints</string>
    <string name="sprint_name">Sprint Name</string>
    <string name="all_sprints">All Sprints</string>
    <string name="add_sprint">Add Sprint</string>
    <string name="deadline">Deadline</string>
    <string name="add_to_sprint">Add to Sprint</string>
    <string name="pending">Pending</string>
    <string name="completed">Completed</string>
    <string name="closed">Closed</string>
    <string name="assigned_to">Assigned to</string>
    <string name="task_status">Task Status</string>
    <string name="save">Save</string>
    <string name="remove_from_sprint">Remove from Sprint</string>
    <string name="assign_to">Assign to</string>
    <string name="currently_assigned_to">Currently Assigned to</string>
    <string name="starting">Starting</string>
    <string name="ending">Ending</string>
    <string name="progress">Progress</string>
    <string name="assign_now_to">Assign now to</string>
    <string name="issues">Issues</string>
    <string name="issue">Issue</string>
    <string name="issue_description">Issue Description</string>
    <string name="add_issue">Add Issue</string>
</resources>